--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header> <img src="./img/peepo-hey-peepo.gif" width="70" height="70" style="border-radius: 20px;">
+    <header> <img src="https://cdn.betterttv.net/emote/5c0e1a3c6c146e7be4ff5c0c/3x" width="70" height="70" style="border-radius: 20px;">
         <h1>Home</h1>
     </header>
     <h2 class="main">About me</h2>
@@ -25,12 +25,12 @@
         𝐁𝐖 - 𝐃𝐞𝐮𝐭𝐬𝐜𝐡</p>
     <p class="main"><img width="27" height="27" src="https://cdn.betterttv.net/emote/605dfabd7493072efdeb4f5e/3x"
             style="padding-right: 4px;">#mastsau4ever</p>
-    <p class="main"><img width="27" height="27" src="./img/VoHiYo.png" style="padding-right: 4px;">Twitch Moderator</p>
+    <p class="main"><img width="27" height="27" src="https://static-cdn.jtvnw.net/emoticons/v2/81274/default/dark/3.0" style="padding-right: 4px;">Twitch Moderator</p>
     <h2 class="main">Moderation</h2>
     <p class="main"><a href="https://chatty.github.io/" target="_blank">Chatty</a> for <img
             src="https://cdn.betterttv.net/emote/5ec068a99af1ea16863b2fc7/3x" width="27" height="27"></p>
     <p class="main"><a href="https://chatty.github.io/" target="_blank">Chatterino-Nightly</a> for <img
-            src="./img/Chatting.gif" width="27" height="27"></p>
+            src="https://cdn.7tv.app/emote/6105de63a32b8c587a52a21f/4x" width="27" height="27"></p>
     <h2 class="main"><a
             onclick="window.open('https:\/\/modlookup.3v.fi/u/LsCo','popup','width=750,height=750');">ModLookUp </a>
     </h2>
