--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Spike">
     <meta name="description" content="Home">
 
-    <link rel='icon' href='./img/favicon.ico' />
+    <link rel='icon' href='https://cdn.7tv.app/emote/6239577d6cf512e934d3e64a/4x' />
     <link rel="stylesheet" href="./style.css">
 
     <script src="./script.js" defer></script>
