--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <p class="main"><a href="https://chatty.github.io/" target="_blank">Chatterino-Nightly</a> for <img
             src="https://cdn.7tv.app/emote/6105de63a32b8c587a52a21f/4x" width="27" height="27"></p>
     <h2 class="main"><a
-            onclick="window.open('https:\/\/modlookup.3v.fi/u/LsCo','popup','width=750,height=750');">ModLookUp </a>
+            onclick="window.open('https:\/\/modlookup.3v.fi/u/spikelk7','popup','width=750,height=750');">ModLookUp </a>
     </h2>
     <div class="main">
         <p>Follow total: <a id="follows"></a> - Views total: <a id="views"></a></p>
