--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p>Follow total: <a id="follows"></a> - Views total: <a id="views"></a></p>
         <p>Channels: <a id="total"></a> - Partners: <a id="partners"></a></p>
     </div>
-    <h2 class="main">Chats there I moderate
+    <h2 class="main">Chats which I moderate
     </h2>
     <div class="main">
         <div id="channels"></div>
