--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <div class="main">
         <div id="channels"></div>
     </div>
+    <p class="main">
+        Joined my Discord Server <a href="https://discord.gg/6GcAWfSesj" target="_blank">https://discord.gg/6GcAWfSesj</a>
     </main>
 </body>
 
