--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <tr>
                     <td>
                         <div class="spacer main">
-                            <img class="emote" src="./img/chatty.png">
+                            <img class="emote" src="./img/Chatty.png">
                         </div>
                     </td>
                     <td class="space">
@@ -96,7 +96,7 @@
                 <tr>
                     <td>
                         <div class="spacer main">
-                            <img class="emote" src="./img/chatterino.png">
+                            <img class="emote" src="./img/Chatterino.png">
                         </div>
                     </td>
                     <td class="space">
