--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>LsCo - Main</title>
-    <meta name="author" content="LsCo">
+    <title>spikelk7 - Main</title>
+    <meta name="author" content="spikelk7">
     <meta name="description" content="Home">
 
     <link rel='icon' href='https://cdn.betterttv.net/emote/6228bfe606fd6a9f5be69c39/2x' />
@@ -109,7 +109,7 @@
             </table>
         </div>
         <h2>
-            <a href="https://modlookup.3v.fi/u/lsco" target="_blank" rel="noopener noreferrer">ModLookUp</a>
+            <a href="https://modlookup.3v.fi/u/spikelk7" target="_blank" rel="noopener noreferrer">ModLookUp</a>
         </h2>
         <div id="modlookup" class="main"></div>
         <h2>
