--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </td>
                     <td class="space">
                         <text>
-                            #mastsau4eve
+                            #mastsau4ever
                         </text>
                     </td>
                 </tr>
