--- a/index.html
+++ b/index.html
@@ -121,10 +121,62 @@
             Social Media
         </h2>
         <div class="main">
-            <text class="social-media"><a href="https://www.twitch.tv/spikelk7/" target="_blank" rel="noopener noreferrer">Twitch</a></text>
+            <text class="social-media"><a href="https://www.twitch.tv/spikelk7/" target="_blank" rel="noopener noreferrer">Twitch</a></text>  
             <text class="social-media"><a href="https://discord.gg/B4WkUBmrse" target="_blank" rel="noopener noreferrer">Discord</a></text>
             <text class="social-media"><a href="https://www.instagram.com/spikelk7/" target="_blank" rel="noopener noreferrer">Instagram</a></text>
         </div>
+    </h2>
+    <div class="line main">
+        <table>
+            <tr>
+                <td>
+                    <div class="spacer main lol"> 
+                        <img class="emote" src="./img/DC-AmongUS.png">
+                    </div>
+                </td>
+                <td class="space">
+                    <text>
+                        <a href="https://discord.gg/B4WkUBmrse" target="_blank"
+                            rel="noopener noreferrer">Discord</a>
+                    </text>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div class="line main">
+        <table>
+            <tr>
+                <td>
+                    <div class="spacer main">
+                        <img class="emote" src="./img/AmongusInsta.png">
+                    </div>
+                </td>
+                <td class="space">
+                    <text>
+                        <a href="https://www.instagram.com/spikelk7/" target="_blank"
+                            rel="noopener noreferrer">Instagram</a>
+                    </text>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div class="line main">
+        <table>
+            <tr>
+                <td>
+                    <div class="spacer main">
+                        <img class="emote" src="./img/AmongusTwitch.png">
+                    </div>
+                </td>
+                <td class="space">
+                    <text>
+                        <a href="https://www.twitch.tv/spikelk7" target="_blank"
+                            rel="noopener noreferrer">Twitch</a>
+                    </text>
+                </td>
+            </tr>
+        </table>
+    </div>
     </main>
 </body>
 
