--- a/index.html
+++ b/index.html
@@ -71,6 +71,43 @@
                 </tr>
             </table>
         </div>
+         <h2>
+            Contact
+        </h2>
+        <div class="line main">
+            <table>
+                <tr>
+                    <td>
+                        <div class="spacer main">
+                            <img class="emote" src="./img/DiscordContact.png">
+                        </div>
+                    </td>
+                    <td class="space">
+                        <text>
+                            <a href="https://discord.com/users/698257199159312446" target="_blank"
+                                rel="noopener noreferrer">spikelk7#1068</a>
+                        </text>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="line main">
+            <table>
+                <tr>
+                    <td>
+                        <div class="spacer main">
+                            <img class="emote" src="./img/TwitchContact.png">
+                        </div>
+                    </td>
+                    <td class="space">
+                        <text>
+                            <a href="https://www.twitch.tv/spikelk7" target="_blank"
+                                rel="noopener noreferrer">Twitch-PN</a>
+                        </text>
+                    </td>
+                </tr>
+            </table>
+        </div>
         <h2>
             Tools
         </h2>
