--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
                 <tr>
                     <td>
                         <div class="spacer main">
-                            <img class="emote" src="./img/Chatty.png">
+                            <img class="emote" src="./img/Modge.gif">
                         </div>
                     </td>
                     <td class="space">
                         <text>
                             <a href="https://chatty.github.io" target="_blank"
-                                rel="noopener noreferrer">Chatty</a>
+                                rel="noopener noreferrer">Chatty</a> for moderation 
                         </text>
                     </td>
                 </tr>
@@ -133,13 +133,13 @@
                 <tr>
                     <td>
                         <div class="spacer main">
-                            <img class="emote" src="./img/Chatterino.png">
+                            <img class="emote" src="./img/HACKERMANS.gif">
                         </div>
                     </td>
                     <td class="space">
                         <text>
                             <a href="https://github.com/SevenTV/chatterino7/releases/tag/nightly-build" target="_blank"
-                                rel="noopener noreferrer">Chatterino-Nightly</a>
+                                rel="noopener noreferrer">Chatterino-Nightly</a> for Chatting 
                         </text>
                     </td>
                 </tr>
