--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <td class="space">
                         <text>
                             <a href="https://chatty.github.io" target="_blank"
-                                rel="noopener noreferrer">Chatty</a> for moderation 
+                                rel="noopener noreferrer">Chatty</a> for Moderation 
                         </text>
                     </td>
                 </tr>
