--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <td class="space">
                         <text>
                             <a href="https://discord.com/users/698257199159312446" target="_blank"
-                                rel="noopener noreferrer">spikelk7#1068</a>
+                                rel="noopener noreferrer">Spike#1068</a>
                         </text>
                     </td>
                 </tr>
