--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 </td>
                 <td class="space">
                     <text>
-                        <a href="https://discord.gg/B4WkUBmrse" target="_blank"
+                        <a href="https://discord.gg/jRVyMqKk" target="_blank"
                             rel="noopener noreferrer">Discord</a>
                     </text>
                 </td>
